--- a/anime_category.html
+++ b/anime_category.html
@@ -1,15 +1,15 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="ja">
  <head>
   <meta charset="UTF-8">
-  <title>ルートの雑記帳</title>
+  <title>びりっとがんばるオタク</title>
   <link rel="stylesheet" href="style_hp.css">
  </head>
 
 <body id = "posts">
 
 <header>
-<h2><a href="webpage.html"><img src="ico.jpg">ルート雑記帳</a></h2>
+<h2><a href="webpage.html"><img src="ico.jpg">びりっとがんばるオタク</a></h2>
 
 <nav>
 <ul>
@@ -47,10 +47,19 @@ Copyright &copy;twitter @sdxfw56,All rights reserved.
 </div>	<!--   id="contain">   -->
 <div id ="menu">
 <aside>
+<h1>更新情報</h1>
+<ul>
+<li><a href ="erg_category.html">エロゲまとめ(2019/04/01)</a></li>
+<li><a href ="一番上の記事.html">一番上の記事(2019/04/02)</a></li>
+
+</ul>
+</aside>
+<aside>
 <h1>CATEGORIES</h1>
 <ul>
 <li><a href ="erg_category.html">エロゲ</a></li>
 <li><a href ="anime_category.html">アニメ</a></li>
+<li><a href ="extra.html">その他</a></li>
 </ul>
 </aside>
 
