--- a/webtop.html
+++ b/webtop.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="ja">
  <head>
   <meta charset="UTF-8">
-  <title>ルートの雑記帳</title>
+  <title>びりっとがんばるオタク</title>
   <link rel="stylesheet" href="style_hp.css">
  </head>
 
 <body id = "top">
 <header>
-<h2><a href="webpage.html"><img src="ico.jpg">ルートの雑記帳</a></h2>
+<h2><a href="webpage.html"><img src="ico.jpg">びりっとがんばるオタク</a></h2>
 
 <nav>
 <ul>
@@ -22,13 +22,13 @@
 
 <section>
 <div id = "photo">
-<h1>ルートの雑記帳</h1>
-<p>やるな笑笑</p>
+<h1>LEARN FROM YESTERDAY</h1>
+<p>live for today,hope for tomorrow</p>
 <a href = "webpage.html">HOME</a>
 
 </div>
 
-<p id = "message">なんとなく作っただけだからガバガバなんや…</p>
+<p id = "message">タイトル名募集。。。。。。。。。。。</p>
 </section>
 
 </body>
