--- a/プリンセスプリンシパル.html
+++ b/プリンセスプリンシパル.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="ja">
  <head>
   <meta charset="UTF-8">
-  <title>ルートの雑記帳</title>
+  <title>びりっとがんばるオタク</title>
   <link rel="stylesheet" href="style_hp.css">
  </head>
 
 <body>
 <header>
-<h2><a href="webpage.html"><img src="ico.jpg">ルートの雑記帳</a></h2>
+<h2><a href="webpage.html"><img src="ico.jpg">びりっとがんばるオタク</a></h2>
 
 <nav>
 <ul>
@@ -30,6 +30,18 @@ yuriecchi
 
 </article>
 
+<div id ="move">
+<h1>
+<li><a href = "ergまとめ.html">≪前の記事</a></li>
+<li><a href = "webpage.html">HOME</a></li>
+<li>次の記事≫</li>	
+</h1>
+</div>
+
+
+
+
+
 <footer>
 <small>
 Copyright &copy;twitter @sdxfw56,All rights reserved.
@@ -42,12 +54,20 @@ Copyright &copy;twitter @sdxfw56,All rights reserved.
 		
 </div>	<!--   id="contain">   -->
 <div id ="menu">
+<aside>
+<h1>更新情報</h1>
+<ul>
+<li><a href ="erg_category.html">エロゲまとめ(2019/04/01)</a></li>
+<li><a href ="一番上の記事.html">一番上の記事(2019/04/02)</a></li>
 
+</ul>
+</aside>
 <aside>
 <h1>CATEGORIES</h1>
 <ul>
 <li><a href ="erg_category.html">エロゲ</a></li>
 <li><a href ="anime_category.html">アニメ</a></li>
+<li><a href ="extra.html">その他</a></li>
 </ul>
 </aside>
 
