--- a/プリンセスプリンシパル.html
+++ b/プリンセスプリンシパル.html
@@ -1,24 +1,18 @@
-﻿<!DOCTYPE HTML>
+﻿<!--ここから-->
+<!DOCTYPE HTML>
 <html lang="ja">
+<script type="text/javascript" src="webframe.js"></script>
+
  <head>
   <meta charset="UTF-8">
-  <title>びりっとがんばるオタク</title>
+  <script type="text/javascript">head();</script>		<!--タイトル-->
   <link rel="stylesheet" href="style_hp.css">
  </head>
 
-<body>
-<header>
-<h2><a href="webpage.html"><img src="ico.jpg">びりっとがんばるオタク</a></h2>
+<body id = "posts">
 
-<nav>
-<ul>
-<li><a href = "webtop.html">トップ</a></li>
-<li><a href = "webpage.html">information/一覧</a></li>
-
-</ul>
-</nav>
-
-</header>
+<script type="text/javascript">header();</script>
+<!--ここまで-->
 
 <div id ="container">
 <div id ="contain">
@@ -34,50 +28,31 @@ yuriecchi
 <h1>
 <li><a href = "ergまとめ.html">≪前の記事</a></li>
 <li><a href = "webpage.html">HOME</a></li>
-<li>次の記事≫</li>	
+<li><a href = "蒼の彼方のフォーリズム.html">次の記事≫</a></li>	
 </h1>
 </div>
 
 
 
+<!--ここから-->
 
-
-<footer>
-<small>
-Copyright &copy;twitter @sdxfw56,All rights reserved.
-</small>
-</footer>
-
-
+<script type="text/javascript">footer();</script>		<!--footer-->
 
 
 		
 </div>	<!--   id="contain">   -->
 <div id ="menu">
-<aside>
-<h1>更新情報</h1>
-<ul>
-<li><a href ="erg_category.html">エロゲまとめ(2019/04/01)</a></li>
-<li><a href ="一番上の記事.html">一番上の記事(2019/04/02)</a></li>
-
-</ul>
-</aside>
-<aside>
-<h1>CATEGORIES</h1>
-<ul>
-<li><a href ="erg_category.html">エロゲ</a></li>
-<li><a href ="anime_category.html">アニメ</a></li>
-<li><a href ="extra.html">その他</a></li>
-</ul>
-</aside>
-
-<aside>
-<h1>ARCHIVES</h1>
-<li><a href ="2019_03.html">2019/03</a></li>
-<li><a href ="2019_04.html">2019/04</a></li>
-</aside>
+<script type="text/javascript">menu();</script>			<!--menu-->
 </div>		<!--	id ="menu"       -->
 </div>		<!--   id="container"    -->
 
+
+</section>
+
+
+
 </body>
 </html>
+
+
+<!--ここまで-->
