--- a/2019_03.html
+++ b/2019_03.html
@@ -1,25 +1,18 @@
-﻿<!DOCTYPE HTML>
+﻿<!--ここから-->
+<!DOCTYPE HTML>
 <html lang="ja">
+<script type="text/javascript" src="webframe.js"></script>
+
  <head>
   <meta charset="UTF-8">
-  <title>びりっとがんばるオタク</title>
+  <script type="text/javascript">head();</script>		<!--タイトル-->
   <link rel="stylesheet" href="style_hp.css">
  </head>
 
 <body id = "posts">
 
-<header>
-<h2><a href="webpage.html"><img src="ico.jpg">びりっとがんばるオタク</a></h2>
-
-<nav>
-<ul>
-<li><a href = "webtop.html">トップ</a></li>
-<li><a href = "webpage.html">information/一覧</a></li>
-
-</ul>
-</nav>
-
-</header>
+<script type="text/javascript">header();</script>
+<!--ここまで-->
 
 <section>
 <h3>2019/03更新</h3>
@@ -62,53 +55,25 @@
 </a>
 </article>
 
-<footer>
-<small>
-Copyright &copy;twitter @sdxfw56,All rights reserved.
-</small>
-</footer>
+<!--ここから-->
 
-
+<script type="text/javascript">footer();</script>		<!--footer-->
 
 
 		
 </div>	<!--   id="contain">   -->
 <div id ="menu">
-<aside>
-<h1>更新情報</h1>
-<ul>
-<li><a href ="erg_category.html">エロゲまとめ(2019/04/01)</a></li>
-<li><a href ="一番上の記事.html">一番上の記事(2019/04/02)</a></li>
-
-</ul>
-</aside>
-<aside>
-<h1>CATEGORIES</h1>
-<ul>
-<li><a href ="erg_category.html">エロゲ</a></li>
-<li><a href ="anime_category.html">アニメ</a></li>
-<li><a href ="extra.html">その他</a></li>
-</ul>
-</aside>
-
-<aside>
-<h1>ARCHIVES</h1>
-<li><a href ="2019_03.html">2019/03</a></li>
-<li><a href ="2019_04.html">2019/04</a></li>
-</aside>
+<script type="text/javascript">menu();</script>			<!--menu-->
 </div>		<!--	id ="menu"       -->
 </div>		<!--   id="container"    -->
-
 
 
 </section>
 
 
 
-
-
-
-
-
 </body>
 </html>
+
+
+<!--ここまで-->
