--- a/webpage.html
+++ b/webpage.html
@@ -4,6 +4,16 @@
 <script type="text/javascript" src="webframe.js"></script>
 
  <head>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137837414-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137837414-1');
+</script>
+
   <meta charset="UTF-8">
   <script type="text/javascript">head();</script>		<!--タイトル-->
   <link rel="stylesheet" href="style_hp.css">
