--- a/webtop.html
+++ b/webtop.html
@@ -1,6 +1,16 @@
 ﻿<!DOCTYPE HTML>
 <html lang="ja">
  <head>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137837414-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137837414-1');
+</script>
+
   <meta charset="UTF-8">
   <title>びりっとがんばるオタク</title>
   <link rel="stylesheet" href="style_hp.css">
