--- a/一番上の記事.html
+++ b/一番上の記事.html
@@ -35,7 +35,10 @@
 <h1>一番上の記事</h1>
 <h4>プロフィール</h4>
 大阪のFラン大学にいます。
-
+<h4>スマホゲー</h4>
+<p>魔女兵器</p>
+<p>グリムエコーズ</p>
+<p>プリコネ</p>
 <h4>趣味</h4>
 
 <p>えちえちゲーム(<a href = "ergまとめ.html">まとめたもの</a>)</p>
