--- a/webpage.html
+++ b/webpage.html
@@ -38,6 +38,10 @@
 <h4>プロフィール</h4>
 大阪のFラン大学にいます。
 
+<h4>スマホゲー</h4>
+<p>魔女兵器</p>
+<p>グリムエコーズ</p>
+<p>プリコネ</p>
 <h4>趣味</h4>
 
 <p>えちえちゲーム(<a href = "ergまとめ.html">まとめたもの</a>)</p>
