--- a/webpage.html
+++ b/webpage.html
@@ -39,9 +39,10 @@
 大阪のFラン大学にいます。
 
 <h4>スマホゲー</h4>
-<p>魔女兵器</p>
+<p>アズレン（ルルイエ）</p>
+<p>魔女兵器(04)</p>
 <p>グリムエコーズ</p>
-<p>プリコネ</p>
+<p>プリコネ(戦力５５万↑）</p>
 <h4>趣味</h4>
 
 <p>えちえちゲーム(<a href = "ergまとめ.html">まとめたもの</a>)</p>
