--- a/蒼の彼方のフォーリズム.html
+++ b/蒼の彼方のフォーリズム.html
@@ -68,7 +68,7 @@
 <h1>
 <li><a href ="プリンセスプリンシパル.html">≪前の記事</a></li>
 <li><a href ="webpage.html">HOME</a></li>
-<li>次の記事≫</li>	
+<li><a href ="route.html">次の記事≫</a></li>	
 </h1>
 </div>
 
