--- a/route.html
+++ b/route.html
@@ -39,7 +39,7 @@
 <article>
 <h2>wdd_d3</h2>
 <figure>
-<img src="route/3.png">
+<img src="../route/3.png">
 </figure>
 恐らく<a href ="https://twitter.com/yuriyurioji3?lang=ja">たわお(@yuriyurioji3)</a>
 不定期に「えっちしたいルート選手権」を開催している。
