--- a/route.html
+++ b/route.html
@@ -39,7 +39,7 @@
 <article>
 <h2>wdd_d3</h2>
 <figure>
-<img src="../route/3.png">
+<img src="route/3.png">
 </figure>
 恐らく<a href ="https://twitter.com/yuriyurioji3?lang=ja">たわお(@yuriyurioji3)</a>
 不定期に「えっちしたいルート選手権」を開催している。
@@ -48,7 +48,7 @@
 <article>
 <h2>wdd_d5</h2>
 <figure>
-<img src="route/5.png">
+<img src="route/5.PNG">
 </figure>
 <a href ="https://twitter.com/yuriyurioji3?lang=ja">
 恐らく<a href ="https://twitter.com/elinaisgod?lang=ja">どらちゃん(@elinaisgod)</a>
@@ -58,7 +58,7 @@
 <article>
 <h2>wdd_d6</h2>
 <figure>
-<img src="route/6.png">
+<img src="6.png">
 </figure>
 <a href ="https://twitter.com/Shiratyou?lang=ja">白庁(@Shiratyou)</a>
 真ルートと部活が同じの留学生
