--- a/route.html
+++ b/route.html
@@ -39,7 +39,7 @@
 <article>
 <h2>wdd_d3</h2>
 <figure>
-<img src="route/3.png">
+<img src="route/3.PNG">
 </figure>
 恐らく<a href ="https://twitter.com/yuriyurioji3?lang=ja">たわお(@yuriyurioji3)</a>
 不定期に「えっちしたいルート選手権」を開催している。
@@ -58,7 +58,7 @@
 <article>
 <h2>wdd_d6</h2>
 <figure>
-<img src="6.png">
+<img src="route/6.PNG">
 </figure>
 <a href ="https://twitter.com/Shiratyou?lang=ja">白庁(@Shiratyou)</a>
 真ルートと部活が同じの留学生
@@ -67,7 +67,7 @@
 <article>
 <h2>wdd_d7</h2>
 <figure>
-<img src="route/7.png">
+<img src="route/7.PNG">
 </figure>
 <a href ="https://twitter.com/wdd_d7?lang=ja">ルート(@wdd_d7)</a>
 ホンモノである
@@ -76,7 +76,7 @@
 <article>
 <h2>wdd_d8</h2>
 <figure>
-<img src="route/8.png">
+<img src="route/8.PNG">
 </figure>
 <a href ="https://twitter.com/wdd_d8?lang=ja">ルート(@wdd_d8)</a>
 ホンモノのサブ垢（今は使われていない）
@@ -85,7 +85,7 @@
 <article>
 <h2>wdd_d9</h2>
 <figure>
-<img src="route/9.png">
+<img src="route/9.PNG">
 </figure>
 <a href ="https://twitter.com/wdd_d9?lang=ja">ルート(@wdd_d9)</a>
 ホンモノの厳選垢（今はpythonでいじったりするだけ）
@@ -94,7 +94,7 @@
 <article>
 <h2>wdd_d10</h2>
 <figure>
-<img src="route/10.png">
+<img src="route/10.PNG">
 </figure>
 <a href ="https://twitter.com/hinoshizuku1379?lang=ja">ひのしずく(@hinoshizuku1379)</a>
 ルートの名で好き勝手なことやってるやべーやつ、一番活動している
@@ -103,7 +103,7 @@
 <article>
 <h2>wdd_d11</h2>
 <figure>
-<img src="route/11.png">
+<img src="route/11.PNG">
 </figure>
 恐らく<a href ="https://twitter.com/yuriyurioji3?lang=ja">たわお(@yuriyurioji3)</a>
 アイコンが百合えっちなので
@@ -112,7 +112,7 @@
 <article>
 <h2>wdd_d12</h2>
 <figure>
-<img src="route/12.png">
+<img src="route/12.PNG">
 </figure>
 <a href ="https://twitter.com/LunaLunaChery?lang=ja">きのかわ(@LunaLunaChery)</a>
 先輩！！！！
@@ -121,7 +121,7 @@
 <article>
 <h2>wdd_d13</h2>
 <figure>
-<img src="route/13.png">
+<img src="route/13.PNG">
 </figure>
 恐らく<a href ="https://twitter.com/yuriyurioji3?lang=ja">たわお(@yuriyurioji3)</a>
 多すぎるｗすみぺのオタク
@@ -130,7 +130,7 @@
 <article>
 <h2>wdd_d15</h2>
 <figure>
-<img src="route/15.png">
+<img src="route/15.PNG">
 </figure>
 <a href ="https://twitter.com/poke_gu?lang=ja">GUちゃん(@poke_gu)</a>
 ポケモンとエロゲのオタク
@@ -139,7 +139,7 @@
 <article>
 <h2>wdd_d16</h2>
 <figure>
-<img src="route/16.png">
+<img src="route/16.PNG">
 </figure>
 <a href ="https://twitter.com/whimsicott_opu?lang=ja">ゆーと(@whimsicott_opu)</a>
 atcoder/ぷよぷよ/リア充（敵）
@@ -148,7 +148,7 @@ atcoder/ぷよぷよ/リア充（敵）
 <article>
 <h2>wdd_d17</h2>
 <figure>
-<img src="route/17.png">
+<img src="route/17.PNG">
 </figure>
 <a href ="https://twitter.com/tanishi_1123?lang=ja">わ(@tanishi_1123)</a>
 １０の後輩（）
@@ -157,7 +157,7 @@ atcoder/ぷよぷよ/リア充（敵）
 <article>
 <h2>wdd_d18</h2>
 <figure>
-<img src="route/18.png">
+<img src="route/18.PNG">
 </figure>
 <a href ="https://twitter.com/tanishi_1123?lang=ja">いかちゃん(@nntiasari)</a>
 演習のとき後ろの席にいる
@@ -166,7 +166,7 @@ atcoder/ぷよぷよ/リア充（敵）
 <article>
 <h2>wdd_d20</h2>
 <figure>
-<img src="route/20.png">
+<img src="route/20.PNG">
 </figure>
 １７号の知り合いらしい、、東京のルート。ARIAのヘッダーなので信用できるオタクそう
 </article>
@@ -174,7 +174,7 @@ atcoder/ぷよぷよ/リア充（敵）
 <article>
 <h2>wdd_d777</h2>
 <figure>
-<img src="route/777.png">
+<img src="route/777.PNG">
 </figure>
 <h1><a href ="https://twitter.com/elinaisgod?lang=ja">なんこいつ</a></h1>
 パチかす
@@ -183,7 +183,7 @@ atcoder/ぷよぷよ/リア充（敵）
 <article>
 <h2>wdd_d1001</h2>
 <figure>
-<img src="route/1001.png">
+<img src="route/1001.PNG">
 </figure>
 <a href ="https://twitter.com/tanishi_1123?lang=ja">わ(@tanishi_1123)</a>
 だとおもってる。正直なところわからない。
